--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,5 +14,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".KerberosAgentService"
+                 android:exported="false" />
     </application>
 </manifest> 
